backend/akfm_laboratory_core/tests/requests/snapshots/already_register_error@auth_request.snap
---
source: tests/requests/auth.rs
assertion_line: 75
expression: "(response.status_code(), response.text())"
---
(
    409,
    "{\"error\":\" could not register user\",\"description\":\"Entity already exists\"}",
)
